[package]
name = "easy-jsonrpc"
description = """
Convert a trait definition into a jsonrpc api.
"""
repository = "https://github.com/layer1capital/easy-jsonrpc"
version = "0.5.2"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
license = "Apache-2.0"
documentation = "https://docs.rs/easy-jsonrpc"
edition = "2018"
readme = "readme.md"
keywords = ["json", "rpc", "macro", "client", "server"]

[dependencies]
easy-jsonrpc-proc-macro = { path = "./proc_macros", version = "0.5.0" }
serde_json = "1"
serde = "1"
jsonrpc-core = "10.0.1"
rand = "0.6.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
