[package]
name = "easy-jsonrpc-proc-macro"
description = """
Procedural macro portion of easy-jsonrpc. Don't use this crate directly. Use easy-jsonrpc instead.
"""
repository = "https://github.com/layer1capital/easy-jsonrpc"
version = "0.3.0"
authors = ["Andrew Dirksen <andrew@dirksen.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.26", features = ["full"] }
proc-macro2 = "0.4.26"
quote = "0.6.11"
heck = "0.3.1"
